--- a/index.html
+++ b/index.html
@@ -86,21 +86,21 @@
         <!-- Team Buttons -->
         <section class="teams-section">
             <div class="team-buttons">
-                <div class="team-button" style="background-image: url('assets/veteranen.jpg')">
+                <a href="veteranen.html" class="team-button" style="background-image: url('assets/veteranen.jpg')">
                     <div class="team-overlay">
                         <h2>VETERANEN</h2>
                     </div>
-                </div>
-                <div class="team-button" style="background-image: url('assets/zaterdag.jpg')">
+                </a>
+                <a href="zaterdag.html" class="team-button" style="background-image: url('assets/zaterdag.jpg')">
                     <div class="team-overlay">
                         <h2>ZATERDAG</h2>
                     </div>
-                </div>
-                <div class="team-button" style="background-image: url('assets/zondag.jpg')">
+                </a>
+                <a href="zondag.html" class="team-button" style="background-image: url('assets/zondag.jpg')">
                     <div class="team-overlay">
                         <h2>ZONDAG</h2>
                     </div>
-                </div>
+                </a>
             </div>
         </section>
 
@@ -113,7 +113,7 @@
                     </svg>
                     <div class="contact-text">
                         <h3>Email</h3>
-                        <p>info@vvsrotselaar.be</p>
+                        <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="e48d8a828ba4929297968b90978188858596ca8681">[email&#160;protected]</a></p>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -148,3 +148,5 @@
     <script type="module" src="app.js"></script>
 </body>
 </html>
+
+   
