--- a/contact.html
+++ b/contact.html
@@ -82,7 +82,9 @@
         <section class="contact-info-section">
             <div class="club-info">
                 <h3>Voetbalclub VVS Rotselaar vzw</h3>
-                <p><strong>Terrein:</strong> Hellichtstraat (naast nr. 83), 3110 Rotselaar</p>
+                <p><strong>Email:</strong> <a href="mailto:info@vvsrotselaar.be">info@vvsrotselaar.be</a></p>
+                <p><strong>Telefoonnr.:</strong> <a href="tel:+3216443966">+32 16 44 39 66</a></p>
+                <p><strong>Terrein:</strong> <a href="https://www.google.com/maps/search/?api=1&query=Hellichtstraat+83,+3110+Rotselaar,+Belgium" target="_blank" rel="noopener noreferrer">Hellichtstraat (naast nr. 83), 3110 Rotselaar</a></p>
                 <p><strong>Maatschappelijke zetel:</strong> Hanewijk 36, 3118 Werchter</p>
                 <p><strong>KBO:</strong> 0424.117.454</p>
                 <p><strong>RPR:</strong> Leuven</p>
