--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
                         <h2>ZATERDAG</h2>
                     </div>
                 </a>
-                <a href="zondag.html" class="team-button" style="background-image: url('assets/zondag.jpg')">
+                <a href="zondag.html" class="team-button" style="background-image: url('assets/zondag.png')">
                     <div class="team-overlay">
                         <h2>ZONDAG</h2>
                     </div>
@@ -113,7 +113,7 @@
                     </svg>
                     <div class="contact-text">
                         <h3>Email</h3>
-                        <p><a href="/cdn-cgi/l/email-protection" class="__cf_email__" data-cfemail="e48d8a828ba4929297968b90978188858596ca8681">[email&#160;protected]</a></p>
+                        <p><a href="mailto:info@vvsrotselaar.be">info@vvsrotselaar.be</a></p>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -122,7 +122,7 @@
                     </svg>
                     <div class="contact-text">
                         <h3>Telefoon</h3>
-                        <p>+32 16 44 39 66</p>
+                        <p><a href="tel:+3216443966">+32 16 44 39 66</a></p>
                     </div>
                 </div>
                 <div class="contact-item">
@@ -132,7 +132,7 @@
                     </svg>
                     <div class="contact-text">
                         <h3>Locatie</h3>
-                        <p>Naast Hellichtstraat 83, 3110 Rotselaar, Belgium</p>
+                        <p><a href="https://www.google.com/maps/search/?api=1&query=Hellichtstraat+83,+3110+Rotselaar,+Belgium" target="_blank" rel="noopener noreferrer">Naast Hellichtstraat 83, 3110 Rotselaar</a></p>
                     </div>
                 </div>
             </div>
