--- a/live.html
+++ b/live.html
@@ -48,7 +48,7 @@
                 </div>
                 <div class="match-time">
                     <div class="current-minute" id="currentMinute">00:00</div>
-                    <div class="match-status" id="matchStatus">Live</div>
+                    <div class="match-status" id="matchStatus" style="border-radius: 6px;">Live</div>
                 </div>
                 <div class="team-display away">
                     <h2 id="awayTeamName">Uitploeg</h2>
