Final Version - Fix Issues v1

--- a/contact.html
+++ b/contact.html
@@ -48,15 +48,15 @@
             </div>
             <div class="faq-item">
                 <h3 class="faq-question">Welke teams zijn er allemaal?</h3>
-                <p class="faq-answer">We hebben veteranen die spelen op vrijdagavond, zaterdagploegen voor verschillende leeftijdscategorieën, en zondag voor de jeugdteams.</p>
+                <p class="faq-answer">We hebben veteranen die spelen op vrijdagavond, zaterdag- en zondagploeg.</p>
             </div>
             <div class="faq-item">
                 <h3 class="faq-question">Hoe kan ik lid worden?</h3>
-                <p class="faq-answer">Neem contact met ons op via het onderstaande formulier of kom langs tijdens een training. Nieuwe leden zijn altijd welkom!</p>
+                <p class="faq-answer">Kom een keer langs tijdens een training of neem contact met ons op via het onderstaande formulier. Nieuwe leden zijn altijd welkom!</p>
             </div>
             <div class="faq-item">
                 <h3 class="faq-question">Wat zijn de lidgelden?</h3>
-                <p class="faq-answer">Wanneer je niet komt helpen op evenementen bedraagt het lidgeld € 150, kom je 1x helpen is dat nog € 100, sta je klaar op 2 evenementen betaal je nog € 50.</p>
+                <p class="faq-answer">Wanneer je niet komt helpen op evenementen bedraagt het lidgeld € 150, kom je 1x helpen is dat nog € 100, sta je paraat voor 2 evenementen betaal je nog € 50.</p>
             </div>
         </section>
 
