--- a/index.html
+++ b/index.html
@@ -35,6 +35,13 @@
         </div>
     </header>
 
+    <!-- Announcement Banner -->
+    <div class="announcement-banner">
+        <div class="announcement-content" id="announcementContent">
+            <!-- Tekst wordt dynamisch geladen via announcement.js -->
+        </div>
+    </div>
+
     <main>
         <!-- Hero Section / Live Match Card -->
         <section class="hero-section" id="heroSection">
@@ -146,7 +153,6 @@
 
     <script type="module" src="firebase-config.js"></script>
     <script type="module" src="app.js"></script>
+    <script type="module" src="announcement.js"></script>
 </body>
 </html>
-
-   
