--- a/veteranen.html
+++ b/veteranen.html
@@ -25,6 +25,7 @@
                 </button>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html">HOME</a></li>
+                    <li><a href="veteranen.html" class="active">VETERANEN</a></li>
                     <li><a href="evenementen.html">EVENEMENTEN</a></li>
                     <li><a href="sponsors.html">SPONSORS</a></li>
                     <li><a href="galerij.html">GALERIJ</a></li>
