--- a/zaterdag.html
+++ b/zaterdag.html
@@ -25,6 +25,7 @@
                 </button>
                 <ul class="nav-menu" id="navMenu">
                     <li><a href="index.html">HOME</a></li>
+                    <li><a href="zaterdag.html" class="active">ZATERDAG</a></li>
                     <li><a href="evenementen.html">EVENEMENTEN</a></li>
                     <li><a href="sponsors.html">SPONSORS</a></li>
                     <li><a href="galerij.html">GALERIJ</a></li>
