--- a/admin.html
+++ b/admin.html
@@ -237,7 +237,10 @@
                 <button class="tab-btn" data-tab="matches">Wedstrijden Beheren</button>
                 <button class="tab-btn" data-tab="ranking">Rangschikking Beheren</button>
                 <button class="tab-btn" data-tab="evenementen">Evenementen Beheren</button>
-                <button class="tab-btn" data-tab="contactberichten">Contactberichten</button>
+                <button class="tab-btn" data-tab="contactberichten">
+                    Contactberichten
+                    <span class="badge" id="contactberichtenBadge" style="display: none;">0</span>
+                </button>
             </div>
 
             <!-- Members Tab -->
