Weghalen telnr. - update tijdslijn teampagina

--- a/contact.html
+++ b/contact.html
@@ -44,26 +44,22 @@
         <section class="faq-section">
             <div class="faq-item">
                 <h3 class="faq-question">Wanneer trainen we?</h3>
-                <p class="faq-answer">Elke dinsdag om 20:00 uur op ons hoofdterrein aan de Hellichtstraat.</p>
+                <p class="faq-answer">Elke dinsdag om 20:00 uur op ons terrein aan de Hellichtstraat.</p>
             </div>
             <div class="faq-item">
                 <h3 class="faq-question">Welke teams zijn er allemaal?</h3>
-                <p class="faq-answer">We hebben veteranen die spelen op vrijdagavond, zaterdag- en zondagploeg.</p>
+                <p class="faq-answer">Er is veteranenploeg die spelen op vrijdagavond, een zaterdag- en zondagploeg.</p>
             </div>
             <div class="faq-item">
                 <h3 class="faq-question">Hoe kan ik lid worden?</h3>
                 <p class="faq-answer">Kom een keer langs tijdens een training of neem contact met ons op via het onderstaande formulier. Nieuwe leden zijn altijd welkom!</p>
-            </div>
-            <div class="faq-item">
-                <h3 class="faq-question">Wat zijn de lidgelden?</h3>
-                <p class="faq-answer">Wanneer je niet komt helpen op evenementen bedraagt het lidgeld € 150, kom je 1x helpen is dat nog € 100, sta je paraat voor 2 evenementen betaal je nog € 50.</p>
             </div>
         </section>
 
         <!-- Contact Form Section -->
         <section class="contact-form-section">
             <h2>HEEFT U NOG ANDERE VRAGEN?</h2>
-            <p class="subtitle">U kan via onderstaand formulier vrijblijvend een mailtje sturen<br>en wij doen ons best om u zo snel mogelijk te antwoorden.</p>
+            <p class="subtitle">U kan via onderstaand formulier vrijblijvend een bericht sturen<br>en wij doen ons best om u zo snel mogelijk te antwoorden.</p>
             
             <form class="contact-form" id="contactForm">
                 <div class="form-group">
@@ -83,7 +79,6 @@
             <div class="club-info">
                 <h3>Voetbalclub VVS Rotselaar vzw</h3>
                 <p><strong>Email:</strong> <a href="mailto:info@vvsrotselaar.be">info@vvsrotselaar.be</a></p>
-                <p><strong>Telefoonnr.:</strong> <a href="tel:+3216443966">+32 16 44 39 66</a></p>
                 <p><strong>Terrein:</strong> <a href="https://www.google.com/maps/search/?api=1&query=Hellichtstraat+83,+3110+Rotselaar,+Belgium" target="_blank" rel="noopener noreferrer">Hellichtstraat (naast nr. 83), 3110 Rotselaar</a></p>
                 <p><strong>Maatschappelijke zetel:</strong> Hanewijk 36, 3118 Werchter</p>
                 <p><strong>KBO:</strong> 0424.117.454</p>
