--- a/sponsors.html
+++ b/sponsors.html
@@ -79,7 +79,7 @@
                 <div class="sponsor-info">
                     <h3>Café de Zijbeuk</h3>
                     <p>Café De Zijbeuk is zonder twijfel het beste café in Rotselaar, bekend om zijn top­sfeer, heerlijke pinten en een uitbater die iedereen zich meteen thuis laat voelen.</p>
-                    <a href="https://www.facebook.com/p/Caf%C3%A9-De-Zijbeuk-100057437140292/?locale=nl_NL" target="_blank" rel="noopener noreferrer" class="sponsor-link">Bezoek website →</a>
+                    <a href="https://www.facebook.com/p/Caf%C3%A9-De-Zijbeuk-100057437140292/?locale=nl_NL" target="_blank" rel="noopener noreferrer" class="sponsor-link">Bekijk Facebookpagina →</a>
                 </div>
             </div>
 
@@ -149,7 +149,7 @@
                 <div class="sponsor-info">
                     <h3>Wouters Roel Sanitair en Verwarming</h3>
                     <p>Sanitair, verwarming en duurzame energie. Nieuwbouw en renovatie</p>
-                    <a href="https://www.facebook.com/sanitairverwarmingWoutersRoel/" target="_blank" rel="noopener noreferrer" class="sponsor-link">Bezoek website →</a>
+                    <a href="https://www.facebook.com/sanitairverwarmingWoutersRoel/" target="_blank" rel="noopener noreferrer" class="sponsor-link">Bekijk Facebookpagina →</a>
                 </div>
             </div>
 
@@ -166,15 +166,6 @@
                 <div class="contact-text">
                     <h3>Email</h3>
                     <p><a href="mailto:info@vvsrotselaar.be">info@vvsrotselaar.be</a></p>
-                </div>
-            </div>
-            <div class="contact-item">
-                <svg class="contact-icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
-                    <path d="M3 5a2 2 0 012-2h3.28a1 1 0 01.948.684l1.498 4.493a1 1 0 01-.502 1.21l-2.257 1.13a11.042 11.042 0 005.516 5.516l1.13-2.257a1 1 0 011.21-.502l4.493 1.498a1 1 0 01.684.949V19a2 2 0 01-2 2h-1C9.716 21 3 14.284 3 6V5z"/>
-                </svg>
-                <div class="contact-text">
-                    <h3>Telefoon</h3>
-                    <p><a href="tel:+3216443966">+32 16 44 39 66</a></p>
                 </div>
             </div>
             <div class="contact-item">
