Add Rockwerchter page

--- a/admin.html
+++ b/admin.html
@@ -230,7 +230,7 @@
 
     <main class="admin-page">
         <div class="admin-container">
-            <h2>Administratie</h2>
+            <h2><a href="rockwerchter.html">Administratie</a></h2>
             
             <div class="admin-tabs">
                 <button class="tab-btn active" data-tab="members">Leden Beheren</button>
